k8s/service.yml
apiVersion: v1

kind: Service

metadata:
  name: lattice-server

spec:
  selector:
    app: lattice-server
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 32131
    port: 80
    targetPort: 4000
