k8s/ingress.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: lattice-server
  labels:
    last_updated: 1

spec:
  backend:
    serviceName: lattice-server
    servicePort: 4000
